samples/_failures_safe/1761073610_752224_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_920fb0d2.c: In function ‘main’:
./samples/SAFE/__tmp_920fb0d2.c:162:5: error: expected declaration or statement at end of input
  162 |     };
      |     ^
